Доработка действий Питомцев
Улучшены и сгруппированы методы